task3/log/build_2025-11-14_18-34-58/action_demo_pkg/stderr.log
  File "/root/ros_ws/tasks/task3/install/action_demo_pkg/lib/python3.10/site-packages/action_demo_pkg/goal_tracker_server.py", line 17
    		if msg.x != x_value
    		                   ^
SyntaxError: expected ':'

